--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="scalatest_2.12-3.0.4.jar"/>
-	<classpathentry kind="lib" path="breeze_and_viz_1.0.jar"/>
+	<classpathentry kind="lib" path="breeze_breeze-viz-1.0_2.12.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
